--- a/GILS-RVND-TSP/leitor-instancias/makefile
+++ b/GILS-RVND-TSP/leitor-instancias/makefile
@@ -1,10 +1,52 @@
+#detecta se o sistema é de 32 ou 64 bits
+BITS_OPTION = -m64
 
-src = $(wildcard src/*.cpp)
-obj = $(src:.cpp=.o)
+#### define o compilador
+CPPC = g++
+#############################
 
-CXXFLAGS = -std=c++11 -I include/ -g
+#### opcoes de compilacao e includes
+CCOPT = $(BITS_OPTION) -O3 -fPIC -fexceptions -DNDEBUG -DIL_STD -std=c++0x
+CONCERTINCDIR = $(CONCERTDIR)/include
+#############################
 
-tsp: $(obj)
-	$(CXX) -o $@ $^ $(CXXFLAGS)
+#### flags do linker
+#############################
+
+#### diretorios com os source files e com os objs files
+SRCDIR = src
+OBJDIR = obj
+#############################
+
+#### lista de todos os srcs e todos os objs
+SRCS = $(wildcard $(SRCDIR)/*.cpp)
+OBJS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SRCS))
+#############################
+
+#### regra principal, gera o executavel
+tsp: $(OBJS) 
+	@echo  "\033[31m \nLinking all objects files: \033[0m"
+	$(CPPC) $(BITS_OPTION) $(OBJS) -o $@ $(CCLNFLAGS)
+############################
+
+#inclui os arquivos de dependencias
+-include $(OBJS:.o=.d)
+
+#regra para cada arquivo objeto: compila e gera o arquivo de dependencias do arquivo objeto
+#cada arquivo objeto depende do .c e dos headers (informacao dos header esta no arquivo de dependencias gerado pelo compiler)
+$(OBJDIR)/%.o: $(SRCDIR)/%.cpp
+	@echo  "\033[31m \nCompiling $<: \033[0m"
+	$(CPPC) $(CCFLAGS) -c $< -o $@
+	@echo  "\033[32m \ncreating $< dependency file: \033[0m"
+	$(CPPC) -std=c++0x  -MM $< > $(basename $@).d
+	@mv -f $(basename $@).d $(basename $@).d.tmp #proximas tres linhas colocam o diretorio no arquivo de dependencias (g++ nao coloca, surprisingly!)
+	@sed -e 's|.*:|$(basename $@).o:|' < $(basename $@).d.tmp > $(basename $@).d
+	@rm -f $(basename $@).d.tmp
+
+#delete objetos e arquivos de dependencia
 clean:
-	rm -rf *o tsp
+	@echo "\033[31mcleaning obj directory \033[0m"
+	@rm tsp -f $(OBJDIR)/*.o $(OBJDIR)/*.d
+
+
+rebuild: clean tsp
