Remake folder structure and fixes to makefiles and Data.cpp

--- a/BB-Combinatório/algoritmo-hungaro/makefile
+++ b/BB-Combinatório/algoritmo-hungaro/makefile
@@ -25,7 +25,7 @@ OBJS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SRCS))
 #############################
 
 #### regra principal, gera o executavel
-tsp: $(OBJS) 
+bnb: $(OBJS) 
 	@echo  "\033[31m \nLinking all objects files: \033[0m"
 	$(CPPC) $(BITS_OPTION) $(OBJS) -o $@ $(CCLNFLAGS)
 ############################
@@ -48,7 +48,7 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
 #delete objetos e arquivos de dependencia
 clean:
 	@echo "\033[31mcleaning obj directory \033[0m"
-	@rm tsp -f $(OBJDIR)/*.o $(OBJDIR)/*.d
+	@rm bnb -f $(OBJDIR)/*.o $(OBJDIR)/*.d
 
 
 rebuild: clean tsp
